test_suite/tests/ui/pass/option_slice_type.rs
use clapi::macros::*;

#[command]
#[option(slice)]
fn test(slice: &[u32]){}

fn main(){}